hphp/hack/test/typecheck/const_attribute/static/unset_const_on_instance.php.exp
File "unset_const_on_instance.php", line 10, characters 9-13:
You cannot use this syntax in an `unset()` expression. (Parsing[1002])
File "unset_const_on_instance.php", line 10, characters 3-15:
In `strict` mode, `unset` is banned except on dynamic, darray, keyset, or dict indexing (Typing[4135])
